feat: add agreement to accounting
